--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         </developer>
     </developers>
 
+
     <build>
         <plugins>
             <!-- 编译插件, 设定JDK版本 -->
@@ -100,7 +101,7 @@
         </plugins>
     </build>
     <properties>
-        <java.version>1.6</java.version>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
@@ -117,5 +118,40 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.hankcs</groupId>
+            <artifactId>hanlp</artifactId>
+            <version>portable-1.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>5.5.0</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apdplat</groupId>-->
+            <!--<artifactId>word</artifactId>-->
+            <!--<version>1.3</version>-->
+        <!--</dependency>-->
+        <!--wordseg-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
+
     </dependencies>
 </project>
